--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
+              "src/robots.txt",
               "src/sitemap.xml"
             ],
             "styles": [
